--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ion-item>
           
             <ion-item>
-                <ion-input label="Precio:" id="preciotxt"></ion-input>
+                <ion-input label="Precio:" id="preciotxt" type="number"></ion-input>
             </ion-item>
 
             <ion-button onclick="agregar()">Agregar</ion-button> 
