--- a/index.html
+++ b/index.html
@@ -8,27 +8,49 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1>TICKET</h1>
-    <ion-section>
-        <ion-list>
-            <ion-item>
-                <ion-input label="Producto:" id="productotxt"></ion-input>
-            </ion-item>
-          
-            <ion-item>
-                <ion-input label="Precio:" id="preciotxt"></ion-input>
-            </ion-item>
+    <ion-grid>
+        <ion-row>
+          <ion-col size="12" size-md ="3">Columna 1</ion-col>
+          <ion-col size="12" size-md ="3">Columna 2</ion-col>
+          <ion-col size="12" size-md ="3">Columna 3</ion-col>
+          <ion-col size="12" size-md ="3">Columna 4</ion-col>
+        </ion-row>
 
-            <ion-button onclick="agregar()">Agregar</ion-button> 
-        </ion-list>
-    </ion-section>
+        <ion-row>
+            <ion-col size="12">Columna 1</ion-col>
+          </ion-row>
 
-    <ion-section id="LISTADO">
-        <h1>LISTADO DE TICKET</h1>
-        <div id="listaProductos"></div>
-        <p id="total"></p>
-    </ion-section>
+        <ion-row>
+            <ion-col size="12" size-md ="1">Columna 1</ion-col>
+            <ion-col size="12" size-md ="1">Columna 2</ion-col>
+            <ion-col size="12" size-md ="1">Columna 3</ion-col>
+            <ion-col size="12" size-md ="1">Columna 4</ion-col>
+            <ion-col size="12" size-md ="1">Columna 5</ion-col>
+            <ion-col size="12" size-md ="1">Columna 6</ion-col>
+            <ion-col size="12" size-md ="1">Columna 7</ion-col>
+            <ion-col size="12" size-md ="1">Columna 8</ion-col>
+            <ion-col size="12" size-md ="1">Columna 9</ion-col>
+            <ion-col size="12" size-md ="1">Columna 10</ion-col>
+            <ion-col size="12" size-md ="1">Columna 11</ion-col>
+            <ion-col size="12" size-md ="1">Columna 12</ion-col>
+          </ion-row>
 
+          <ion-row>
+            <ion-col size="12" size-md ="6" >Columna 1</ion-col>
+            <ion-col size="12" size-md ="2">Columna 2</ion-col>
+            <ion-col size="12" size-md ="3">Columna 3</ion-col>
+            <ion-col size="12" size-md ="1">Columna 4</ion-col>
+          </ion-row>
+
+        </ion-grid>
+
+ 
+
+ 
+    
+
+
+   
     <script src="codigo.js"></script> 
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
